--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
-    "date-fns": "^2.22.1"
+    "date-fns": "^2.22.1",
+    "wepack": "^0.0.1"
   },
   "optionalDependencies": {
     "eslint": "^7.29.0"
